Bug 353011 - Balooctl check no longer works
Summary: Balooctl check no longer works
Status: RESOLVED FIXED
Alias: None
Product: Baloo
Classification: Unmaintained
Component: balooctl (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Vishesh Handa
URL:
Keywords:
: 352229 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-21 22:57 UTC by Vishesh Handa
Modified: 2015-10-05 09:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vishesh Handa 2015-09-21 22:57:08 UTC
Balooctl check is broken
Comment 1 Pinak Ahuja 2015-10-02 17:34:57 UTC
Git commit f9d8a30dcec5fa60b8dc5d077e1e2387d5623939 by Pinak Ahuja.
Committed on 02/10/2015 at 17:21.
Pushed by pinakahuja into branch 'master'.

Port balooctl check to work with new architecture

Add a new Runnable which checks for unindexed files and indexes them.

REVIEW: 125481

M  +1    -0    src/file/CMakeLists.txt
M  +19   -0    src/file/fileindexscheduler.cpp
M  +3    -0    src/file/fileindexscheduler.h
M  +5    -1    src/file/indexerstate.h
A  +69   -0    src/file/unindexedfileindexer.cpp     [License: LGPL]
A  +51   -0    src/file/unindexedfileindexer.h     [License: LGPL]
M  +4    -1    src/file/unindexedfileiterator.cpp
M  +1    -2    src/tools/balooctl/main.cpp

http://commits.kde.org/baloo/f9d8a30dcec5fa60b8dc5d077e1e2387d5623939
Comment 2 Vishesh Handa 2015-10-05 09:03:18 UTC
*** Bug 352229 has been marked as a duplicate of this bug. ***