Port balooctl check to work with new architecture

Add a new Runnable which checks for unindexed files and indexes them.

REVIEW: 125481
BUG: 353011